# code-verification-guard-v2

./: .gitignore  AGENTS.md  README.md  code-verification-guard.yaml  create_zip.bat  guard-manifest.yaml  guard_report.txt  pyproject.toml  requirements.txt
code_verification_guard/: __init__.py  main.py
docs/: agent-architecture.md  agent-packaging.md  agent-verification.md  agent-yaml-contract.md  yaml-contract.md
guard/: run.py
profiles/: ci.yaml  local.yaml  strict.yaml
scopes/: common-scopes.yaml  dart-scopes.yaml  flutter-scopes.yaml  java-scopes.yaml  memox-scopes.yaml  python-scopes.yaml  typescript-scopes.yaml
scripts/: create_zip.py
templates/: code-verification-guard.yaml  guard-manifest-rule-set.yaml  profile.yaml  registry.yaml  scope.yaml
tests/: __init__.py  test_cli.py  test_config_manager.py  test_file_name_rule.py  test_file_scanner.py  test_guard_application_exit_policy.py  test_max_build_lines_rule.py  test_max_lines_rule.py  test_memox_architecture_guard_rules.py  test_memox_class_name_length_rules.py  test_memox_crud_naming_rules.py  test_memox_design_token_guard_rules.py  test_memox_error_handling_guard_rules.py  test_memox_flutter_convention_guard_rules.py  test_memox_hook_guard_rules.py  test_memox_naming_length_rules.py  test_memox_riverpod_ui_guard_rules.py  test_memox_ui_async_guard_patterns.py  test_memox_v6_ruleset_contract.py  test_regex_rule.py  test_reporters_metadata.py  test_rule_factory.py  test_rule_registry.py  test_rule_runner.py  test_rule_runner_config_diagnostics.py  test_rule_set_resolver.py  (+2 more)
(+153 files in other folders)
