[project]
name = "code-verification-guard"
version = "0.1.0"
description = "A portable configurable code standards verification guard."
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["code_verification_guard*"]
exclude = [
    "configs*",
    "templates*",
    "registries*",
    "docs*",
    "tests*",
]
